feat(server): 지도 계열 SQL·툴팁 변환·저장 컨텍스트 확장